# cpp-qt-base

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpp-qt-base.code-workspace
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
